# aoc

./: CMakeLists.txt  README.md
data/: reactor-boot-sequence-med.txt  reactor-boot-sequence-small.txt  reactor-boot-sequence.txt  reactor-reboot-all.txt  snailfish.add.2.txt  snailfish.add.3.txt  snailfish.puzzle.txt
data/snailfish/: add.1.txt
src/: CMakeLists.txt
src/reactor/: CMakeLists.txt  common.hpp  geom.cpp  geom.hpp  init-and-reboot.cpp  reactor.cpp  reactor.hpp  read.cpp  read.hpp  reboot-on-the-fly.cpp  reboot.cpp  settings.hpp
src/snailfish/: CMakeLists.txt  add.cpp  add.hpp  num.cpp  num.hpp  read.cpp  read.hpp  test-add.cpp  test-magn.cpp
